--- a/css/index.css
+++ b/css/index.css
@@ -87,6 +87,12 @@ img {
     padding: 20px 0;
 }
 
+.section-a {
+    background: #D3D3D3;
+    color: #000;
+    opacity: 0.9;
+}
+
 .section-b {
     background:#2c3e50;
     color: #fff;
@@ -103,6 +109,12 @@ li {
 
 a {
     color: #000;
+}
+
+
+
+.card .description {
+    font-weight: bold; 
 }
 
 
