--- a/css/homepage.css
+++ b/css/homepage.css
@@ -14,7 +14,8 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
   text-align: center;
   text-shadow:4px 4px 0 rgba(0,0,0,0.1);
   padding:10px;
-  margin: 5px;
+  width: calc(33.333333% - 20px);
+  margin: 10px;
 }
 
 /* Colours for each box */
